chip/habitat/ghu/y.output

state 0
	$accept : _commandStream $end 

	error  shift 5
	ADD  shift 59
	ALIAS  shift 60
	ALLMACROS  shift 61
	ALLNAMES  shift 62
	BREAK  shift 63
	CLASS  shift 64
	CONTENTS  shift 65
	COOK  shift 66
	DEFINE  shift 111
	DISPLAY  shift 68
	ELSE  shift 69
	ELSEIF  shift 70
	ENDFOR  shift 71
	ENDIF  shift 72
	ENDMACRO  shift 73
	EXECUTE  shift 74
	FIND  shift 75
	FOR  shift 76
	GET  shift 77
	GRIDDLE  shift 78
	HELP  shift 79
	IF  shift 80
	KILL  shift 81
	LIST  shift 82
	MACRO  shift 83
	NAME  shift 85
	NEWTURF  shift 86
	NUKE  shift 87
	ORACLE  shift 88
	PAGES  shift 89
	PLAYERS  shift 90
	PROCESSES  shift 91
	QUIT  shift 92
	RAW  shift 93
	READ  shift 94
	READMAIL  shift 95
	REMOVE  shift 96
	REMTURF  shift 97
	SENDMAIL  shift 98
	SET  shift 99
	START_LOGGING  shift 100
	STOP_LOGGING  shift 101
	TELEPORT  shift 102
	TITLES  shift 104
	TURFS  shift 105
	UNNAME  shift 106
	UPDATE  shift 107
	VALUE  shift 108
	VOICE  shift 109
	WATCH  shift 110
	WRITE  shift 103
	Name  shift 84
	NEWLINE  shift 2
	.  error

	commandStream  goto 1
	commandLine  goto 3
	command  goto 4
	ghuCommand  goto 6
	addCommand  goto 7
	aliasCommand  goto 8
	allmacrosCommand  goto 9
	allnamesCommand  goto 10
	breakCommand  goto 11
	classCommand  goto 12
	contentsCommand  goto 13
	cookCommand  goto 14
	defineCommand  goto 15
	displayCommand  goto 16
	elseCommand  goto 17
	elseIfCommand  goto 18
	endForCommand  goto 19
	endIfCommand  goto 20
	endMacroCommand  goto 21
	executeCommand  goto 22
	findCommand  goto 23
	forCommand  goto 24
	getCommand  goto 25
	griddleCommand  goto 26
	helpCommand  goto 27
	ifCommand  goto 28
	killCommand  goto 29
	listCommand  goto 30
	macroCommand  goto 31
	macroCallCommand  goto 32
	nameCommand  goto 33
	newturfCommand  goto 34
	nukeCommand  goto 35
	oracleCommand  goto 36
	pagesCommand  goto 37
	playersCommand  goto 38
	processesCommand  goto 39
	quitCommand  goto 40
	rawCommand  goto 41
	readCommand  goto 42
	readmailCommand  goto 43
	removeCommand  goto 44
	remturfCommand  goto 45
	sendmailCommand  goto 46
	setCommand  goto 47
	start_loggingCommand  goto 48
	stop_loggingCommand  goto 49
	teleportCommand  goto 50
	writeCommand  goto 51
	titlesCommand  goto 52
	turfsCommand  goto 53
	unnameCommand  goto 54
	updateCommand  goto 55
	valueCommand  goto 56
	voiceCommand  goto 57
	watchCommand  goto 58
	defineHead  goto 67

state 1
	$accept :  commandStream_$end 
	commandStream :  commandStream_NEWLINE 
	commandStream :  commandStream_commandLine NEWLINE 

	$end  accept
	error  shift 5
	ADD  shift 59
	ALIAS  shift 60
	ALLMACROS  shift 61
	ALLNAMES  shift 62
	BREAK  shift 63
	CLASS  shift 64
	CONTENTS  shift 65
	COOK  shift 66
	DEFINE  shift 111
	DISPLAY  shift 68
	ELSE  shift 69
	ELSEIF  shift 70
	ENDFOR  shift 71
	ENDIF  shift 72
	ENDMACRO  shift 73
	EXECUTE  shift 74
	FIND  shift 75
	FOR  shift 76
	GET  shift 77
	GRIDDLE  shift 78
	HELP  shift 79
	IF  shift 80
	KILL  shift 81
	LIST  shift 82
	MACRO  shift 83
	NAME  shift 85
	NEWTURF  shift 86
	NUKE  shift 87
	ORACLE  shift 88
	PAGES  shift 89
	PLAYERS  shift 90
	PROCESSES  shift 91
	QUIT  shift 92
	RAW  shift 93
	READ  shift 94
	READMAIL  shift 95
	REMOVE  shift 96
	REMTURF  shift 97
	SENDMAIL  shift 98
	SET  shift 99
	START_LOGGING  shift 100
	STOP_LOGGING  shift 101
	TELEPORT  shift 102
	TITLES  shift 104
	TURFS  shift 105
	UNNAME  shift 106
	UPDATE  shift 107
	VALUE  shift 108
	VOICE  shift 109
	WATCH  shift 110
	WRITE  shift 103
	Name  shift 84
	NEWLINE  shift 112
	.  error

	commandLine  goto 113
	command  goto 4
	ghuCommand  goto 6
	addCommand  goto 7
	aliasCommand  goto 8
	allmacrosCommand  goto 9
	allnamesCommand  goto 10
	breakCommand  goto 11
	classCommand  goto 12
	contentsCommand  goto 13
	cookCommand  goto 14
	defineCommand  goto 15
	displayCommand  goto 16
	elseCommand  goto 17
	elseIfCommand  goto 18
	endForCommand  goto 19
	endIfCommand  goto 20
	endMacroCommand  goto 21
	executeCommand  goto 22
	findCommand  goto 23
	forCommand  goto 24
	getCommand  goto 25
	griddleCommand  goto 26
	helpCommand  goto 27
	ifCommand  goto 28
	killCommand  goto 29
	listCommand  goto 30
	macroCommand  goto 31
	macroCallCommand  goto 32
	nameCommand  goto 33
	newturfCommand  goto 34
	nukeCommand  goto 35
	oracleCommand  goto 36
	pagesCommand  goto 37
	playersCommand  goto 38
	processesCommand  goto 39
	quitCommand  goto 40
	rawCommand  goto 41
	readCommand  goto 42
	readmailCommand  goto 43
	removeCommand  goto 44
	remturfCommand  goto 45
	sendmailCommand  goto 46
	setCommand  goto 47
	start_loggingCommand  goto 48
	stop_loggingCommand  goto 49
	teleportCommand  goto 50
	writeCommand  goto 51
	titlesCommand  goto 52
	turfsCommand  goto 53
	unnameCommand  goto 54
	updateCommand  goto 55
	valueCommand  goto 56
	voiceCommand  goto 57
	watchCommand  goto 58
	defineHead  goto 67

state 2
	commandStream :  NEWLINE_    (1)

	.  reduce 1


state 3
	commandStream :  commandLine_NEWLINE 
	commandLine :  commandLine_; command 

	NEWLINE  shift 114
	;  shift 115
	.  error


state 4
	commandLine :  command_    (5)

	.  reduce 5


state 5
	commandLine :  error_    (6)

	.  reduce 6


state 6
	command :  ghuCommand_    (8)
	command :  ghuCommand_INTO Filename 
	command :  ghuCommand_APPEND Filename 

	APPEND  shift 117
	INTO  shift 116
	.  reduce 8


state 7
	ghuCommand :  addCommand_    (11)

	.  reduce 11


state 8
	ghuCommand :  aliasCommand_    (12)

	.  reduce 12


state 9
	ghuCommand :  allmacrosCommand_    (13)

	.  reduce 13


state 10
	ghuCommand :  allnamesCommand_    (14)

	.  reduce 14


state 11
	ghuCommand :  breakCommand_    (15)

	.  reduce 15


state 12
	ghuCommand :  classCommand_    (16)

	.  reduce 16


state 13
	ghuCommand :  contentsCommand_    (17)

	.  reduce 17


state 14
	ghuCommand :  cookCommand_    (18)

	.  reduce 18


state 15
	ghuCommand :  defineCommand_    (19)

	.  reduce 19


state 16
	ghuCommand :  displayCommand_    (20)

	.  reduce 20


state 17
	ghuCommand :  elseCommand_    (21)

	.  reduce 21


state 18
	ghuCommand :  elseIfCommand_    (22)

	.  reduce 22


state 19
	ghuCommand :  endForCommand_    (23)

	.  reduce 23


state 20
	ghuCommand :  endIfCommand_    (24)

	.  reduce 24


state 21
	ghuCommand :  endMacroCommand_    (25)

	.  reduce 25


state 22
	ghuCommand :  executeCommand_    (26)

	.  reduce 26


state 23
	ghuCommand :  findCommand_    (27)

	.  reduce 27


state 24
	ghuCommand :  forCommand_    (28)

	.  reduce 28


state 25
	ghuCommand :  getCommand_    (29)

	.  reduce 29


state 26
	ghuCommand :  griddleCommand_    (30)

	.  reduce 30


state 27
	ghuCommand :  helpCommand_    (31)

	.  reduce 31


state 28
	ghuCommand :  ifCommand_    (32)

	.  reduce 32


state 29
	ghuCommand :  killCommand_    (33)

	.  reduce 33


state 30
	ghuCommand :  listCommand_    (34)

	.  reduce 34


state 31
	ghuCommand :  macroCommand_    (35)

	.  reduce 35


state 32
	ghuCommand :  macroCallCommand_    (36)

	.  reduce 36


state 33
	ghuCommand :  nameCommand_    (37)

	.  reduce 37


state 34
	ghuCommand :  newturfCommand_    (38)

	.  reduce 38


state 35
	ghuCommand :  nukeCommand_    (39)

	.  reduce 39


state 36
	ghuCommand :  oracleCommand_    (40)

	.  reduce 40


state 37
	ghuCommand :  pagesCommand_    (41)

	.  reduce 41


state 38
	ghuCommand :  playersCommand_    (42)

	.  reduce 42


state 39
	ghuCommand :  processesCommand_    (43)

	.  reduce 43


state 40
	ghuCommand :  quitCommand_    (44)

	.  reduce 44


state 41
	ghuCommand :  rawCommand_    (45)

	.  reduce 45


state 42
	ghuCommand :  readCommand_    (46)

	.  reduce 46


state 43
	ghuCommand :  readmailCommand_    (47)

	.  reduce 47


state 44
	ghuCommand :  removeCommand_    (48)

	.  reduce 48


state 45
	ghuCommand :  remturfCommand_    (49)

	.  reduce 49


state 46
	ghuCommand :  sendmailCommand_    (50)

	.  reduce 50


state 47
	ghuCommand :  setCommand_    (51)

	.  reduce 51


state 48
	ghuCommand :  start_loggingCommand_    (52)

	.  reduce 52


state 49
	ghuCommand :  stop_loggingCommand_    (53)

	.  reduce 53


state 50
	ghuCommand :  teleportCommand_    (54)

	.  reduce 54


state 51
	ghuCommand :  writeCommand_    (55)

	.  reduce 55


state 52
	ghuCommand :  titlesCommand_    (56)

	.  reduce 56


state 53
	ghuCommand :  turfsCommand_    (57)

	.  reduce 57


state 54
	ghuCommand :  unnameCommand_    (58)

	.  reduce 58


state 55
	ghuCommand :  updateCommand_    (59)

	.  reduce 59


state 56
	ghuCommand :  valueCommand_    (60)

	.  reduce 60


state 57
	ghuCommand :  voiceCommand_    (61)

	.  reduce 61


state 58
	ghuCommand :  watchCommand_    (62)

	.  reduce 62


state 59
	addCommand :  ADD_    (98)
	addCommand :  ADD_value 
	addCommand :  ADD_value = valueList 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 98

	value  goto 118
	lvalue  goto 122

state 60
	aliasCommand :  ALIAS_Name = String 
	aliasCommand :  ALIAS_Name 
	aliasCommand :  ALIAS_    (103)

	Name  shift 135
	.  reduce 103


state 61
	allmacrosCommand :  ALLMACROS_    (104)

	.  reduce 104


state 62
	allnamesCommand :  ALLNAMES_    (105)

	.  reduce 105


state 63
	breakCommand :  BREAK_    (106)

	.  reduce 106


state 64
	classCommand :  CLASS_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 136
	lvalue  goto 122

state 65
	contentsCommand :  CONTENTS_value 
	contentsCommand :  CONTENTS_value FULL 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 137
	lvalue  goto 122

state 66
	cookCommand :  COOK_Filename 

	Filename  shift 138
	.  error


state 67
	defineCommand :  defineHead_NEWLINE fieldList ENDDEFINE 
	defineCommand :  defineHead_NEWLINE ENDDEFINE 

	NEWLINE  shift 139
	.  error


state 68
	displayCommand :  DISPLAY_value 
	displayCommand :  DISPLAY_value . 
	displayCommand :  DISPLAY_    (116)

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 116

	value  goto 140
	lvalue  goto 122

state 69
	elseCommand :  ELSE_    (117)

	.  reduce 117


state 70
	elseIfCommand :  ELSEIF_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 141
	lvalue  goto 122

state 71
	endForCommand :  ENDFOR_    (119)

	.  reduce 119


state 72
	endIfCommand :  ENDIF_    (120)

	.  reduce 120


state 73
	endMacroCommand :  ENDMACRO_    (121)

	.  reduce 121


state 74
	executeCommand :  EXECUTE_Filename 

	Filename  shift 142
	.  error


state 75
	findCommand :  FIND_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 143
	lvalue  goto 122

state 76
	forCommand :  FOR_ALL A 
	forCommand :  FOR_ALL O 
	forCommand :  FOR_ALL R 
	forCommand :  FOR_ALL A IN value 
	forCommand :  FOR_ALL O IN value 
	forCommand :  FOR_value TO value 

	ALL  shift 144
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 145
	lvalue  goto 122

state 77
	getCommand :  GET_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 146
	lvalue  goto 122

state 78
	griddleCommand :  GRIDDLE_value 
	griddleCommand :  GRIDDLE_value FULL 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 147
	lvalue  goto 122

state 79
	helpCommand :  HELP_    (133)
	helpCommand :  HELP_keyword 

	ADD  shift 149
	ALIAS  shift 150
	ALLMACROS  shift 151
	ALLNAMES  shift 152
	CLASS  shift 153
	CONTENTS  shift 154
	COOK  shift 155
	DEFINE  shift 156
	DISPLAY  shift 157
	EXECUTE  shift 158
	FIND  shift 159
	FOR  shift 160
	GET  shift 161
	GRIDDLE  shift 162
	HELP  shift 163
	IF  shift 164
	KILL  shift 165
	LIST  shift 166
	MACRO  shift 167
	NAME  shift 168
	NUKE  shift 169
	ORACLE  shift 170
	PLAYERS  shift 171
	PROCESSES  shift 172
	QUIT  shift 173
	RAW  shift 174
	READ  shift 175
	READMAIL  shift 176
	REMOVE  shift 177
	SENDMAIL  shift 178
	SET  shift 179
	TELEPORT  shift 180
	UPDATE  shift 181
	VOICE  shift 182
	WATCH  shift 183
	WRITE  shift 184
	.  reduce 133

	keyword  goto 148

state 80
	ifCommand :  IF_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 185
	lvalue  goto 122

state 81
	killCommand :  KILL_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 186
	lvalue  goto 122

state 82
	listCommand :  LIST_value DASH value ACTIVE 
	listCommand :  LIST_value DASH value 
	listCommand :  LIST_DASH value ACTIVE 
	listCommand :  LIST_DASH value 
	listCommand :  LIST_value DASH ACTIVE 
	listCommand :  LIST_value DASH 
	listCommand :  LIST_value ACTIVE 
	listCommand :  LIST_value 
	listCommand :  LIST_DASH ACTIVE 
	listCommand :  LIST_DASH 
	listCommand :  LIST_ACTIVE 
	listCommand :  LIST_    (148)

	ACTIVE  shift 189
	DASH  shift 188
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 148

	value  goto 187
	lvalue  goto 122

state 83
	macroCommand :  MACRO_Name 

	Name  shift 190
	.  error


state 84
	macroCallCommand :  Name_valueList 
	macroCallCommand :  Name_    (97)

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 97

	value  goto 192
	lvalue  goto 122
	valueList  goto 191

state 85
	nameCommand :  NAME_Name = value 

	Name  shift 193
	.  error


state 86
	newturfCommand :  NEWTURF_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 194
	lvalue  goto 122

state 87
	nukeCommand :  NUKE_value 
	nukeCommand :  NUKE_value DASH value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 195
	lvalue  goto 122

state 88
	oracleCommand :  ORACLE_value 
	oracleCommand :  ORACLE_ALL 
	oracleCommand :  ORACLE_value DUMP 
	oracleCommand :  ORACLE_ALL DUMP 
	oracleCommand :  ORACLE_value SINCE value 
	oracleCommand :  ORACLE_ALL SINCE value 
	oracleCommand :  ORACLE_value SINCE value DUMP 
	oracleCommand :  ORACLE_ALL SINCE value DUMP 

	ALL  shift 197
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 196
	lvalue  goto 122

state 89
	pagesCommand :  PAGES_value 
	pagesCommand :  PAGES_value = value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 198
	lvalue  goto 122

state 90
	playersCommand :  PLAYERS_    (164)

	.  reduce 164


state 91
	processesCommand :  PROCESSES_    (165)

	.  reduce 165


state 92
	quitCommand :  QUIT_    (166)

	.  reduce 166


state 93
	rawCommand :  RAW_value 
	rawCommand :  RAW_value FULL 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 199
	lvalue  goto 122

state 94
	readCommand :  READ_    (169)
	readCommand :  READ_value 
	readCommand :  READ_value , value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 169

	value  goto 200
	lvalue  goto 122

state 95
	readmailCommand :  READMAIL_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 201
	lvalue  goto 122

state 96
	removeCommand :  REMOVE_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 202
	lvalue  goto 122

state 97
	remturfCommand :  REMTURF_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 203
	lvalue  goto 122

state 98
	sendmailCommand :  SENDMAIL_value 
	sendmailCommand :  SENDMAIL_value FILE Filename 
	sendmailCommand :  SENDMAIL_value FROM value 
	sendmailCommand :  SENDMAIL_value FROM value FILE Filename 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 204
	lvalue  goto 122

state 99
	setCommand :  SET_lvalue = value 
	setCommand :  SET_lvalue = value ! 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 206
	lvalue  goto 205

state 100
	start_loggingCommand :  START_LOGGING_Filename 
	start_loggingCommand :  START_LOGGING_Filename CONTINUE 

	Filename  shift 207
	.  error


state 101
	stop_loggingCommand :  STOP_LOGGING_    (183)

	.  reduce 183


state 102
	teleportCommand :  TELEPORT_value 
	teleportCommand :  TELEPORT_value = value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 208
	lvalue  goto 122

state 103
	writeCommand :  WRITE_valueList 
	writeCommand :  WRITE_valueList FILE Filename 
	writeCommand :  WRITE_    (207)
	writeCommand :  WRITE_FILE Filename 

	FILE  shift 210
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 207

	value  goto 192
	lvalue  goto 122
	valueList  goto 209

state 104
	titlesCommand :  TITLES_    (186)
	titlesCommand :  TITLES_DASH 
	titlesCommand :  TITLES_value 
	titlesCommand :  TITLES_value DASH value 
	titlesCommand :  TITLES_value DASH 
	titlesCommand :  TITLES_DASH value 

	DASH  shift 211
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 186

	value  goto 212
	lvalue  goto 122

state 105
	turfsCommand :  TURFS_    (192)

	.  reduce 192


state 106
	unnameCommand :  UNNAME_Name 

	Name  shift 213
	.  error


state 107
	updateCommand :  UPDATE_    (194)
	updateCommand :  UPDATE_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 194

	value  goto 214
	lvalue  goto 122

state 108
	valueCommand :  VALUE_value 
	valueCommand :  VALUE_value . 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 215
	lvalue  goto 122

state 109
	voiceCommand :  VOICE_    (198)
	voiceCommand :  VOICE_value 
	voiceCommand :  VOICE_# value 
	voiceCommand :  VOICE_value # value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	#  shift 217
	.  reduce 198

	value  goto 216
	lvalue  goto 122

state 110
	watchCommand :  WATCH_    (202)
	watchCommand :  WATCH_value 
	watchCommand :  WATCH_OFF 

	OFF  shift 219
	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  reduce 202

	value  goto 218
	lvalue  goto 122

state 111
	defineHead :  DEFINE_value String 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 220
	lvalue  goto 122

state 112
	commandStream :  commandStream NEWLINE_    (3)

	.  reduce 3


state 113
	commandStream :  commandStream commandLine_NEWLINE 
	commandLine :  commandLine_; command 

	NEWLINE  shift 221
	;  shift 115
	.  error


state 114
	commandStream :  commandLine NEWLINE_    (2)

	.  reduce 2


state 115
	commandLine :  commandLine ;_command 

	ADD  shift 59
	ALIAS  shift 60
	ALLMACROS  shift 61
	ALLNAMES  shift 62
	BREAK  shift 63
	CLASS  shift 64
	CONTENTS  shift 65
	COOK  shift 66
	DEFINE  shift 111
	DISPLAY  shift 68
	ELSE  shift 69
	ELSEIF  shift 70
	ENDFOR  shift 71
	ENDIF  shift 72
	ENDMACRO  shift 73
	EXECUTE  shift 74
	FIND  shift 75
	FOR  shift 76
	GET  shift 77
	GRIDDLE  shift 78
	HELP  shift 79
	IF  shift 80
	KILL  shift 81
	LIST  shift 82
	MACRO  shift 83
	NAME  shift 85
	NEWTURF  shift 86
	NUKE  shift 87
	ORACLE  shift 88
	PAGES  shift 89
	PLAYERS  shift 90
	PROCESSES  shift 91
	QUIT  shift 92
	RAW  shift 93
	READ  shift 94
	READMAIL  shift 95
	REMOVE  shift 96
	REMTURF  shift 97
	SENDMAIL  shift 98
	SET  shift 99
	START_LOGGING  shift 100
	STOP_LOGGING  shift 101
	TELEPORT  shift 102
	TITLES  shift 104
	TURFS  shift 105
	UNNAME  shift 106
	UPDATE  shift 107
	VALUE  shift 108
	VOICE  shift 109
	WATCH  shift 110
	WRITE  shift 103
	Name  shift 84
	.  error

	command  goto 222
	ghuCommand  goto 6
	addCommand  goto 7
	aliasCommand  goto 8
	allmacrosCommand  goto 9
	allnamesCommand  goto 10
	breakCommand  goto 11
	classCommand  goto 12
	contentsCommand  goto 13
	cookCommand  goto 14
	defineCommand  goto 15
	displayCommand  goto 16
	elseCommand  goto 17
	elseIfCommand  goto 18
	endForCommand  goto 19
	endIfCommand  goto 20
	endMacroCommand  goto 21
	executeCommand  goto 22
	findCommand  goto 23
	forCommand  goto 24
	getCommand  goto 25
	griddleCommand  goto 26
	helpCommand  goto 27
	ifCommand  goto 28
	killCommand  goto 29
	listCommand  goto 30
	macroCommand  goto 31
	macroCallCommand  goto 32
	nameCommand  goto 33
	newturfCommand  goto 34
	nukeCommand  goto 35
	oracleCommand  goto 36
	pagesCommand  goto 37
	playersCommand  goto 38
	processesCommand  goto 39
	quitCommand  goto 40
	rawCommand  goto 41
	readCommand  goto 42
	readmailCommand  goto 43
	removeCommand  goto 44
	remturfCommand  goto 45
	sendmailCommand  goto 46
	setCommand  goto 47
	start_loggingCommand  goto 48
	stop_loggingCommand  goto 49
	teleportCommand  goto 50
	writeCommand  goto 51
	titlesCommand  goto 52
	turfsCommand  goto 53
	unnameCommand  goto 54
	updateCommand  goto 55
	valueCommand  goto 56
	voiceCommand  goto 57
	watchCommand  goto 58
	defineHead  goto 67

state 116
	command :  ghuCommand INTO_Filename 

	Filename  shift 223
	.  error


state 117
	command :  ghuCommand APPEND_Filename 

	Filename  shift 224
	.  error


state 118
	value :  value_+ value 
	value :  value_- value 
	value :  value_/ value 
	value :  value_* value 
	value :  value_& value 
	value :  value_| value 
	value :  value_^ value 
	value :  value_< value 
	value :  value_LEQ value 
	value :  value_EQ value 
	value :  value_NEQ value 
	value :  value_GEQ value 
	value :  value_> value 
	value :  value_LOGAND value 
	value :  value_LOGOR value 
	lvalue :  value_. Name 
	addCommand :  ADD value_    (99)
	addCommand :  ADD value_= valueList 

	LOGOR  shift 239
	LOGAND  shift 238
	<  shift 232
	>  shift 237
	EQ  shift 234
	GEQ  shift 236
	LEQ  shift 233
	NEQ  shift 235
	|  shift 230
	^  shift 231
	&  shift 229
	+  shift 225
	-  shift 226
	*  shift 228
	/  shift 227
	.  shift 240
	=  shift 241
	.  reduce 99


state 119
	value :  Number_    (63)

	.  reduce 63


state 120
	value :  String_    (64)

	.  reduce 64


state 121
	value :  Bitstring_    (65)

	.  reduce 65


state 122
	value :  lvalue_    (66)
	lvalue :  lvalue_( value ) 

	(  shift 242
	.  reduce 66


state 123
	value :  ?_value 

	Name  shift 134
	Number  shift 119
	Bitstring  shift 121
	String  shift 120
	A  shift 129
	O  shift 130
	R  shift 131
	S  shift 132
	U  shift 133
	^  shift 125
	-  shift 124
	?  shift 123
	~  shift 126
	!  shift 127
	(  shift 128
	.  error

	value  goto 243
	lvalue  goto 122

state 124
	value :  -_value 
